2008-03-23  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: generated Windows stubs will honors prefix using Gem.ruby
	instead of hardcoded 'ruby.exe'
	* lib/rubygems/installer.rb: generated Windows stubs scripts will now
	work from differnt directories than Gem::bindir. Fixes bug #16259 by
	Claus Folke Brobak

2008-03-20  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_source_info_cache.rb:  Test with real objects now.
	* lib/rubygems/source_index.rb:  #latest_specs now has latest specs
	for all platforms.
	* lib/rubygems/source_info_cache.rb:  Add latest cache data, only load
	full cache data when needed.

2008-03-20  Luis Lavena  <luislavena@gmail.com>

	* test/gemutilities.rb:  Change all the file processing mechanism to
	enable binary mode by default (required for Windows file operations
	dealing with non-printable characters).

2008-03-19  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/package/tar_output.rb: Adapted code to use #wrap instead 
	of #new when dealing with Zlib::GzipWriter (fixes SEGV and warnings due
	GzipWriter object not being closed explicitly).

2008-03-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Add latest_index.

2008-03-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/defaults.rb:  Add special case for RUBY_ENGINE constant
	when setting default gem dir.
	* Rakefile:  Add update_rubinius and diff_rubinius.

2008-03-08  Lincoln Stoll  <lstoll@lstoll.net>

	* lib/rubygems/server.rb:  Drop use of RDoc's TemplatePage in favor of
	ERB.

2008-03-04  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems/remote_fetcher.rb: Moved #download from
	DependencyInstaller.
	* lib/rubygems/commands/fetch_command.rb: Updated to use #download.
	* lib/rubygems/dependency_installer.rb: install now takes name or dep.
	Renamed gather_specs_to_download to find_spec_by_name_and_version.
	Modifed #initialize to not take gem name or version.

2008-03-04  Eric Hodel  <drbrain@segment7.net>
